<resources>
    <string name="app_name">Masszazs</string>
    <string name="email">Email</string>
    <string name="jelszo">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="becenev">Becenév</string>
    <string name="jelszo_ujra">Jelszó újra</string>
    <string name="cancel">Inkább nem</string>
    <string name="update">Módosítás</string>
    <string name="cancelBook">Lemondás</string>
    <string name="logout">Kijelentkezés</string>
    <string name="channel_name">notify</string>
    <string name="aktual_foglalas">Aktuális foglalásod:</string>
    <string name="login_to_book">Jelentkezz be a foglaláshoz</string>
    <string-array name="orak">
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
    </string-array>
</resources>