<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/registerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:layout_marginTop="50dp"
        android:textSize="24sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_below="@id/registerText"
        />

    <EditText
        android:id="@+id/userNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/becenev"
        android:inputType="text"
        android:layout_below="@id/emailText"
        />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/jelszo"
        android:inputType="textPassword"
        android:layout_below="@id/userNameText"
        />

    <EditText
        android:id="@+id/passwordAgainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/jelszo_ujra"
        android:inputType="textPassword"
        android:layout_below="@id/passwordText"
        />

    <LinearLayout
        android:id="@+id/gombok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_below="@id/passwordAgainText">

        <Button
            android:id="@+id/registerButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordAgainText"
            android:onClick="register"
            android:text="@string/registration"
            app:backgroundTint="@color/teal_700" />

        <Button
            android:id="@+id/registerCancelButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:onClick="cancel"
            android:text="@string/cancel"
            app:backgroundTint="@color/teal_200"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/uzenet"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_below="@+id/gombok"
        />


</RelativeLayout>